fixing css bugs on ie

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -180,26 +180,36 @@ input#password {
 }
 
 input.login {
-	background: url(/images/login-button.png) no-repeat;
+	background: url(../images/login-button.png) no-repeat;
+	//background: url(../images/login-button2.png) no-repeat;
 	border: none;
 	color: #fff;
 	font-size: 14px;
 	padding: 3px 0 4px 0;
+	//padding-top:-1px;
 	width: 90px;
 	height:23px;
 	cursor:pointer;
 }
 
 input.login:hover {
-	background: url(/images/button-login.png) no-repeat;
+	background: url(../images/button-login.png) no-repeat;
+	//background: url(../images/button-login2.png) no-repeat;
+}
+
+#user_session_remember_me{
+	border:none;
+	width:20px;
+	height:20px;
+	float:left;
+	margin-left:-3px;
+	//margin-left:-5px;
 }
 
 .checkbox-left{
 	text-align:left;
 	font-family:arial;
 	margin-left:-5px;
-	width:20px;
-	height:20px;
 	float:left;
 }
 
@@ -207,7 +217,7 @@ input.login:hover {
 	font-family:arial;
 	font-size:11px;
 	float:left;
-	padding:2px 0 0 5px;
+	padding:4px 0 0 0;
 	color:#626262;
 }
 
@@ -470,9 +480,11 @@ td.title-plans {
 
 /* @group Body */
 
+
+
 #bd {
 	clear: both;
-	background: #fff url(/images/backgrounds/body-bottom.png) bottom no-repeat;
+	background:url(/images/backgrounds/body-bottom.png) bottom no-repeat;
 	padding-bottom: 20px;
 	margin: 0 0 30px 0;
 }
@@ -492,6 +504,7 @@ h1#page-header {
 .yui-g {
 	min-height: 335px;
 	padding: 15px 50px 0 50px;
+	background:white;
 	border-left: 1px solid #b4becc;
 	border-right: 1px solid #b4becc;
 }
@@ -594,6 +607,7 @@ div.frontpage {
 #terms_of_service{
 	width:20px;
 	margin-left:60px;
+	border:none;
 	float:left;
 }
 
